crates/toml/tests/snapshots/invalid/array/only-comma-2.stderr
TOML parse error at line 1, column 17
  |
1 | only-comma-2 = [,,]
  |                 ^
extra comma in array, expected value

---
TOML parse error at line 1, column 18
  |
1 | only-comma-2 = [,,]
  |                  ^
extra comma in array, expected value
